--- a/HR_Project/HR_Project.Presentation/Views/Absence/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Absence/Index.cshtml
@@ -148,7 +148,7 @@
 
 					<div class="row">
 						<div class="col-md-6 align-self-center">
-							<p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Showing page @(Model.PageNumber) to @Model.PageCount of @Model.TotalItemCount products</p>
+							<p id="dataTable_info" class="dataTables_info" role="status" aria-live="polite">Sayfa Sayısı @(Model.PageNumber) / @Model.PageCount , İzin Sayısı @Model.TotalItemCount Adet </p>
 						</div>
 						<div class="col-md-6">
 							<nav class="d-lg-flex justify-content-lg-end dataTables_paginate paging_simple_numbers">
