Şifre güncelleme ve mail işleri tamamlandı.

--- a/HR_Project/HR_Project.Presentation/Views/Account/ChangePassword.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Account/ChangePassword.cshtml
@@ -1,11 +1,11 @@
 ﻿@using HR_Project.Common.Models.DTOs;
-@model LoginDTO
+
+@model ChangePasswordDTO
 
 @{
     Layout = null;
 
 }
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -28,10 +28,6 @@
     <!-- Custom styles for this template-->
     <link href="~/startbootstrap/css/sb-admin-2.min.css" rel="stylesheet">
 
-    <!--Toastr-->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
-
 </head>
 
 <body class="bg-gradient-primary">
@@ -47,42 +43,37 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6 d-none d-lg-block bg-register-image"></div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Hoşgeldiniz!</h1>
                                     </div>
-                                    <form class="user" asp-action="Login" method="post">
+                                    <form class="user" asp-action="ChangePassword" method="post" enctype="multipart/form-data">
+                                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+
                                         <div class="form-group" data-validate="Email">
                                             <input type="text" class="form-control form-control-user" name="Email"
                                                    id="exampleInputEmail" aria-describedby="emailHelp"
                                                    placeholder="Email...">
                                         </div>
-                                        <div class="form-group" data-validate="Password">
-                                            <input type="password" class="form-control form-control-user" name="Password"
-                                                   id="exampleInputPassword" placeholder="Şifre">
+
+                                        <div class="form-group" data-validate="NewPassword">
+                                            <input type="password" class="form-control form-control-user" name="NewPassword"
+                                                   id="exampleInputNewPassword" placeholder="YeniŞifre">
                                         </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">
-                                                    Beni Hatırla
-                                                </label>
-                                            </div>
+
+                                        <div class="form-group" data-validate="ReNewPassword">
+                                            <input type="password" class="form-control form-control-user" name="ReNewPassword"
+                                                   id="exampleInputReNewPassword" placeholder="YeniŞifre Tekrar">
                                         </div>
-                                        <input type="submit" value="Giriş Yap" class="btn btn-primary btn-user btn-block" />
-                                           
-                                        
-                                        
+
+
+                                        <input type="submit" value="Şifreyi Değiştir" class="btn btn-primary btn-user btn-block" />
+
                                     </form>
-                                   
-                                    <div class="text-center">
-                                        <a class="small" asp-action="ForgotPassword">Şifremi Unuttum?</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" asp-action="Register">Hesap Oluştur!</a>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -94,9 +85,6 @@
         </div>
 
     </div>
-
-
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
     @section Scripts {
         @if (TempData.ContainsKey("Toastrsuccess"))
@@ -113,10 +101,12 @@
                 toastr.error('@TempData["Toastrerror"]');
             </script>
         }
-    }
 
+
+    };
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <!-- Bootstrap core JavaScript-->
-@*    <script src="~/startbootstrap/vendor/jquery/jquery.min.js"></script>*@
+    <script src="~/startbootstrap/vendor/jquery/jquery.min.js"></script>
     <script src="~/startbootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
@@ -125,6 +115,8 @@
     <!-- Custom scripts for all pages-->
     <script src="~/startbootstrap/js/sb-admin-2.min.js"></script>
 
-</body>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
+
+</body>
 </html>
