TODO lar atıldı

--- a/HR_Project/HR_Project.Presentation/Views/Company/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Company/Create.cshtml
@@ -49,7 +49,7 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Hoşgeldiniz!</h1>
+                                        <h1 class="h4 text-gray-900 mb-4">Şirket Kaydet!</h1>
                                     </div>
                                     <form class="user" asp-action="Create" method="post" enctype="multipart/form-data">
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
