--- a/HR_Project/HR_Project.Presentation/Views/Company/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Company/Index.cshtml
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
+    @*TODO: Şirket Bilgileri yönetici ve admin değiştirebilir. Personnel değiştiremez.*@
 
 <head>
 
