--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Create.cshtml
@@ -149,7 +149,7 @@
                         <span asp-validation-for="DepartmentId" class="text-danger"></span>
                     </div>
                     <div class="col-md-12">
-                        <label class="labels" asp-for="ManagerId">İlçe</label>
+                        <label class="labels" asp-for="ManagerId">Yönetici</label>
                         <select asp-for="ManagerId" id="ManagerId" asp-items="Model.Managers" class="form-control">
                             <option value="-1" selected disabled>Yönetici seçiniz</option>
                         </select>
