--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
@@ -9,6 +9,8 @@
     Layout = "~/Views/Shared/_GeneralLayout.cshtml";
 }
 
+@*TODO: manager ve şirket yöneticisi belirli şeyleri güncelleyebilmeli*@
+
 <form asp-action="Update">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input asp-for="Id" type="hidden" />
@@ -28,13 +30,13 @@
                         <input type="hidden" asp-for="Name">
                         <div class="col-md-6">
                             <label class="labels">Adı</label>
-                            <input type="text" class="form-control" disabled="disabled" placeholder="adı" asp-for="Name">
+                            <input type="text" class="form-control" placeholder="adı" asp-for="Name">
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <input type="hidden" asp-for="Surname">
                         <div class="col-md-6">
                             <label class="labels">Soyadı</label>
-                            <input type="text" class="form-control" disabled="disabled" placeholder="soyadı" asp-for="Surname">
+                            <input type="text" class="form-control" placeholder="soyadı" asp-for="Surname">
                             <span asp-validation-for="Surname" class="text-danger"></span>
                         </div>
 
@@ -68,16 +70,20 @@
                             </select>
                             <span asp-validation-for="RegionId" class="text-danger"></span>
                         </div>
-                        <div class="col-md-12">
-                            <label class="labels">Uyruk</label>
-                            <select class="form-control" disabled="disabled" asp-for="Nation" asp-items="EnumHelper.GetEnumSelectList<Nation>()">
-                                <option value="-1">Uyruk Giriniz</option>
-                            </select>
-                            <span asp-validation-for="Nation" class="text-danger"></span>
-                        </div>
+                        @if (User.IsInRole("CompanyManager"))
+                        {
+                            <div class="col-md-12">
+                                <label class="labels">Uyruk</label>
+                                <select class="form-control" asp-for="Nation" asp-items="EnumHelper.GetEnumSelectList<Nation>()">
+                                    <option value="-1">Uyruk Giriniz</option>
+                                </select>
+                                <span asp-validation-for="Nation" class="text-danger"></span>
+                            </div>
+                        }
+                        
                         <div class="col-md-12">
                             <label class="labels">Doğum Tarihi</label>
-                            <input type="date" class="form-control" placeholder="Doğum tarihi giriniz" asp-for="BirthDate" disabled="disabled">
+                            <input type="date" class="form-control" placeholder="Doğum tarihi giriniz" asp-for="BirthDate">
                             <span asp-validation-for="BirthDate" class="text-danger"></span>
 
                         </div>
@@ -87,7 +93,7 @@
 
                             @if (Model.BloodType != null)
                             {
-                                <select class="form-control" disabled="disabled" asp-for="BloodType" asp-items="EnumHelper.GetEnumSelectList<BloodType>()">
+                                <select class="form-control" asp-for="BloodType" asp-items="EnumHelper.GetEnumSelectList<BloodType>()">
                                     <option value="-1">Kan Grubunuzu Giriniz</option>
                                 </select>
                                 <span asp-validation-for="BloodType" class="text-danger"></span>
@@ -131,38 +137,38 @@
 
                     <div class="col-md-12">
                         <label class="labels">Ünvan</label>
-                        <input type="text" class="form-control" disabled="disabled" placeholder="Ünvan giriniz" asp-for="Title">
+                        <input type="text" class="form-control" placeholder="Ünvan giriniz" asp-for="Title">
                         <span asp-validation-for="Title" class="text-danger"></span>
 
                     </div>
 
                     <div class="col-md-12">
                         <label class="labels">Email</label>
-                        <input type="text" class="form-control" disabled="disabled" placeholder="Email giriniz" asp-for="Email">
+                        <input type="text" class="form-control" placeholder="Email giriniz" asp-for="Email">
                         <span asp-validation-for="Email" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">İşe Giriş Tarihi</label>
-                        <input type="date" class="form-control" disabled="disabled" placeholder="" asp-for="HireDate">
+                        <input type="date" class="form-control" placeholder="" asp-for="HireDate">
                         <span asp-validation-for="HireDate" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Yöneticisi</label>
-                        <input type="text" disabled="disabled" class="form-control" asp-for="ManagerName">
+                        <input type="text" class="form-control" asp-for="ManagerName">
                         <span asp-validation-for="ManagerName" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Şirketi</label>
-                        <input type="text" disabled="disabled" class="form-control" asp-for="CompanyName">
+                        <input type="text" class="form-control" asp-for="CompanyName">
                         <span asp-validation-for="CompanyName" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Departmanı</label>
-                        <input type="text" disabled="disabled" class="form-control" asp-for="DepartmentName">
+                        <input type="text" class="form-control" asp-for="DepartmentName">
                         <span asp-validation-for="DepartmentName" class="text-danger"></span>
 
                     </div>
