Todo lar tamamlandı. Profil resmi güncelleme eklendi

--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Profil.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Profil.cshtml
@@ -2,6 +2,7 @@
 @using HR_Project.Common.Extensions;
 @using HR_Project.Common.Models.DTOs;
 @using HR_Project.Domain.Enum;
+@using System.Security.Claims
 @model UpdateProfileDTO
 
 @{
@@ -15,7 +16,11 @@
     <div class="container rounded bg-white mt-3 mb-5 ">
         <div class="row">
             <div class="col-md-3 border-right">
-                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="@Model.ImagePath"><span class="font-weight-bold">@Model.Name</span><span class="text-black-50">@Model.Email</span><span> </span></div>
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                    <img class="rounded-circle mt-5" width="150px" src="@User?.FindFirst(ClaimTypes.Thumbprint).Value" onclick="openImageUploadModal()">
+                    
+                    <span class="font-weight-bold">@Model.Name @Model.Surname</span><span class="text-black-50">@Model.Email</span><span> </span>
+                </div>
             </div>
 
             <div class="col-md-5 border-right">
@@ -178,6 +183,29 @@
     </div>
 </form>
 
+
+<!-- Profile Image Modal -->
+<div class="modal fade" id="imageUploadModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Profil Resmi Değiştirme</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="file" id="imageInput" accept="image/*">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="saveImage()">Kaydet</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 @section Scripts {
     @if (TempData.ContainsKey("Toastrsuccess"))
     {
@@ -224,4 +252,30 @@
             });
         }
     });
+
+    function openImageUploadModal() {
+        $('#imageUploadModal').modal('show');
+    }
+
+    function saveImage() {
+        // Resmi yükleme işlemleri
+        var formData = new FormData();
+        formData.append('file', $('#imageInput')[0].files[0]);
+        console.log('formData:', formData);
+        $.ajax({
+            url: '/Personnel/UploadImage', // UploadImage controller'ının gerçek URL'sini belirtmelisiniz
+            type: 'POST',
+            data: formData,
+            contentType: false,
+            processData: false,
+            success: function (result) {
+                
+                // Modal'ı kapat
+                $('#imageUploadModal').modal('hide');
+            },
+            error: function (error) {
+                console.error('Resim yükleme hatası:', error);
+            }
+        });
+    }
 </script>
