--- a/HR_Project/HR_Project.Presentation/Views/Expense/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Expense/Index.cshtml
@@ -70,9 +70,15 @@
                                             <thead>
                                                 <tr>
                                                     <th></th>
-                                                    <th>Oluşturulma Tarihi</th>
-                                                    <th>Toplam Tutar</th>
-                                                    <th>Durumu</th>
+                                            <th >
+                                                Oluşturulma Tarihi
+                                            </th>
+                                            <th >
+                                                Toplam tutar
+                                            </th>
+                                            <th >
+                                                Durumu
+                                            </th>
                                                     <th>İşlemler</th>
                                                 </tr>
                                             </thead>
