--- a/HR_Project/HR_Project.Presentation/Views/Absence/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Absence/Update.cshtml
@@ -40,7 +40,7 @@
 			</div>
 			<div class="form-group">
 				<label asp-for="AbsenceDuration" class="control-label">İzin Süresi</label>
-				<input asp-for="AbsenceDuration" class="form-control" />
+				<input asp-for="AbsenceDuration" class="form-control" min="1" />
 				<span asp-validation-for="AbsenceDuration" class="text-danger"></span>
 			</div>
 			<div class="form-group">
