--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -109,7 +109,7 @@
                                             <td>
                                                 <a asp-action="Update" asp-route-id="@item.Id">Düzenle</a>
                                                 |
-                                                <a asp-action="Delete" role="button" onclick="confirmDelete('@item.Id')" id="deleteprocess">Sil</a>
+                                                <a href="#" onclick="confirmDelete('@item.Id')" id="deleteprocess">Sil</a>
                                             </td>
                                         }
                                         else
