--- a/HR_Project/HR_Project.Presentation/Views/Admin/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Admin/Index.cshtml
@@ -112,10 +112,7 @@
 														<button class="btn  btn-link btn-sm" type="submit">Onayla</button>
 													</form>
 													|
-													<form asp-action="Delete" method="post">
-														<input type="hidden" name="id" value="@item.Id" />
-														<button class="btn btn-link btn-sm" type="submit">Sil</button>
-													</form>
+													<button class="btn btn-link btn-sm" type="button" onclick="openDeleteModal('@item.Id')">Sil</button>
 												</td>
 
 
@@ -168,7 +165,28 @@
 		<i class="fas fa-angle-up"></i>
 	</a>
 
-
+	<!-- Delete Modal -->
+	<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Silme Onayı!</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>Silmek istediğinize emin misiniz?</p>
+				</div>
+				<div class="modal-footer">
+					<form asp-action="Delete" method="post">
+						<input type="hidden" id="deleteItemId" name="id" value="" />
+						<button class="btn btn-link btn-sm" type="submit">Sil</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	@section Scripts {
 		@if (TempData.ContainsKey("Toastrsuccess"))
@@ -223,7 +241,6 @@
 </body>
 
 
-@*TODO: Silme işlemi düzeltilecek*@
 
 <script>
 	var dropdown1 = document.getElementById("deleteprocess");
@@ -244,5 +261,10 @@
 		} else {
 
 		}
+	}
+	function openDeleteModal(id) {
+		console.log(id);
+		$('#deleteItemId').val(id);
+		$('#deleteModal').modal('show');
 	}
 </script>
